--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="this app lets you find your favourite food places by location"
     />
     <link href="https://fonts.googleapis.com/css?family=Work%20Sans:300,500,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ravenous</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
